plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
}

group = 'com.fin'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// db
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.29.2'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'

	// lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.aspectj:aspectjweaver'

	// logs
	implementation 'org.slf4j:slf4j-api:2.0.0'
	implementation 'ch.qos.logback:logback-classic:1.4.12'

	// test

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
	testImplementation 'org.wiremock:wiremock-standalone:3.9.1'
	testImplementation 'org.wiremock.integrations.testcontainers:wiremock-testcontainers-module:1.0-alpha-14'
	testImplementation 'org.testcontainers:postgresql:1.20.3'
	testImplementation 'org.liquibase:liquibase-core:4.29.2'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.test {
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}


jacocoTestReport {
	reports {
		html.required = true
		xml.required  = true
	}

	classDirectories.setFrom(classDirectories.files - files("build/classes/java/main/com/fin/models"))
}
